<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutTest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/logoIcon"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingTop="150dp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/email_sign_in_button"
            android:elevation="8dp"
             android:background="@drawable/roundedbutton"
            android:layout_marginBottom="30dp"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/login_text"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:visibility="visible"
            android:textSize="15sp"

            />


        <TextView
            android:id="@+id/orTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/or_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/create_acct_button_login"
            android:elevation="8dp"
            android:background="@drawable/roundedbutton"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="100dp"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/create_text"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />



    </LinearLayout>


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>